updated swagger.json
